--- a/SuperHeroCompose/gradle/libs.versions.toml
+++ b/SuperHeroCompose/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ activityCompose = "1.9.2"
 composeBom = "2024.04.01"
 retrofit = "2.11.0"
 glide = "2.3.8"
+room = "2.6.1"
+ksp = "1.9.0-1.0.13"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,7 +31,12 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
 converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit"}
 glide = {group = "com.github.skydoves", name = "landscapist-glide", version.ref = "glide"}
+room-runtime = {group = "androidx.room", name =  "room-runtime", version.ref = "room"}
+room-compiler = {group = "androidx.room", name =  "room-compiler", version.ref = "room"}
+room-ktx = {group = "androidx.room", name =  "room-ktx", version.ref = "room"}
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+ksp = {id = "com.google.devtools.ksp", version.ref = "ksp"}
 
